WIP: add map initial drag-and-drop

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,3 +14,9 @@
     text-wrap: balance;
   }
 }
+
+/* Overwritten css Leaflet */
+
+div.leaflet-control-zoom.leaflet-bar.leaflet-control {
+  margin-top: 6rem;
+}
